--- a/src/simplify_deployment/data_science/create_residuals.ipynb
+++ b/src/simplify_deployment/data_science/create_residuals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "[29960 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,35 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2022-12-01 21:44:00+00:00    -39.519329\n",
-       "2022-12-01 21:59:00+00:00     96.451439\n",
-       "2022-12-01 22:14:00+00:00   -203.770171\n",
-       "2022-12-01 22:29:00+00:00   -119.853498\n",
-       "2022-12-01 22:44:00+00:00      0.045247\n",
-       "                                ...    \n",
-       "2023-10-31 21:29:00+00:00    167.930012\n",
-       "2023-10-31 21:44:00+00:00     30.995578\n",
-       "2023-10-31 21:59:00+00:00     -7.644297\n",
-       "2023-10-31 22:14:00+00:00     20.902485\n",
-       "2023-10-31 22:29:00+00:00   -112.502758\n",
-       "Name: residuals_s1_vars_50_gen, Length: 29960, dtype: float64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "residuals = predictions[\"y_true\"] - predictions[\"y_pred\"]\n",
     "residuals.name = \"residuals_s1_vars_50_gen\"\n",
-    "residuals.to_parquet(\"/home/thomas/repos/simplify_deployment/data/residuals/residuals_s1_50_gen_parallel.parquet\")\n"
+    "residuals.to_frame().to_parquet(\"/home/thomas/repos/simplify_deployment/data/residuals/residuals_s1_50_gen_parallel.parquet\")\n"
    ]
   }
  ],
