--- a/src/simplify_deployment/data_science/important_variables_analyse.ipynb
+++ b/src/simplify_deployment/data_science/important_variables_analyse.ipynb
@@ -12,7 +12,9 @@
     "from simplify_deployment.organism import Organism\n",
     "from pathlib import Path\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from functools import reduce\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -53,7 +55,8 @@
     "y_test_model, X_test_model = org.create_y_X(\n",
     "    y_test,\n",
     "    X_test,\n",
-    ")"
+    ")\n",
+    "y_test_model = y_test_model.rename(\"y_true\")"
    ]
   },
   {
@@ -214,7 +217,7 @@
     "        pd.Series(\n",
     "            model.predict(X_test_n_vars),\n",
     "            index = X_test_n_vars.index,\n",
-    "            name = f\"y_pred_{n_variables}_variables\"\n",
+    "            name = f\"y_pred_{n_variables}\"\n",
     "        )\n",
     "    )\n",
     "    print(f\"{n_variables} variables predicted.\")\n"
@@ -226,7 +229,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_model.loc[:,vars]"
+    "pred_df = reduce(\n",
+    "    lambda a,b: pd.merge(a,b, left_index = True, right_index = True),\n",
+    "    [y_test_model] + predictions_list\n",
+    ")\n",
+    "pred_df"
    ]
   },
   {
@@ -235,7 +242,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vars"
+    "rmse_list = []\n",
+    "for column in pred_df.columns[1:]:\n",
+    "    rmse = np.sqrt(\n",
+    "        mean_squared_error(\n",
+    "            y_true=pred_df[\"y_true\"],\n",
+    "            y_pred=pred_df[column],\n",
+    "        )\n",
+    "    )\n",
+    "    if column == \"y_pred_s1_variables\":\n",
+    "        n_vars = 28\n",
+    "        source = \"s1\"\n",
+    "        last_added_variable = \"S1\"\n",
+    "    else:\n",
+    "        n_vars = int(column.split(\"y_pred_\")[1])\n",
+    "        source = \"ga\"\n",
+    "        last_added_variable = importance_df_train.iloc[n_vars-1,0]\n",
+    "    rmse_list.append(\n",
+    "        {\n",
+    "            \"source\":source,\n",
+    "            \"n_vars\": n_vars,\n",
+    "            \"rmse\":rmse,\n",
+    "            \"last_added_variable\": last_added_variable,\n",
+    "        }\n",
+    "    )\n",
+    "rmse_df = pd.DataFrame(\n",
+    "    rmse_list,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_rmse = px.scatter(\n",
+    "    rmse_df,\n",
+    "    x = \"n_vars\",\n",
+    "    y = \"rmse\",\n",
+    "    color = \"source\",\n",
+    "    hover_data=\"last_added_variable\"\n",
+    ")\n",
+    "fig_rmse.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importance_df_train"
    ]
   }
  ],
