--- a/src/simplify_deployment/data_science/predictions_with_hour_encoding.ipynb
+++ b/src/simplify_deployment/data_science/predictions_with_hour_encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "    prediction_list.append(\n",
     "        pd.DataFrame(\n",
     "            {\n",
-    "                \"y_pred_hour_spline_encoded\": model.predict(X_test),\n",
+    "                \"y_pred_hour_ordinal_encoded\": model.predict(X_test),\n",
     "            },\n",
     "            index = X_test.index,\n",
     "        )\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +87,15 @@
    "source": [
     "fig = px.line(X_train, x = X_train.index, y = list(X_train.columns[:11]))\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction"
    ]
   }
  ],
