update folder control

--- a/src/simplify_deployment/data_science/predictions_one_model_per_hour.ipynb
+++ b/src/simplify_deployment/data_science/predictions_one_model_per_hour.ipynb
@@ -9,7 +9,8 @@
     "import pandas as pd\n",
     "from simplify_deployment.organism import Organism\n",
     "import plotly.express as px\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -314,12 +315,13 @@
    ],
    "source": [
     "prediction_list = []\n",
+    "folder = Path(\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds_one_model_per_hour_times_24\")\n",
     "for fold in range(12):\n",
     "    # Raw\n",
-    "    X_train_raw = pd.read_parquet(f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds/X_train_fold_{fold}.parquet\")\n",
-    "    X_test_raw = pd.read_parquet(f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds/X_test_fold_{fold}.parquet\")\n",
-    "    y_train_raw = pd.read_parquet(f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds/y_train_fold_{fold}.parquet\")\n",
-    "    y_test_raw = pd.read_parquet(f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds/y_test_fold_{fold}.parquet\")\n",
+    "    X_train_raw = pd.read_parquet(folder/f\"X_train_fold_{fold}.parquet\")\n",
+    "    X_test_raw = pd.read_parquet(folder/f\"X_test_fold_{fold}.parquet\")\n",
+    "    y_train_raw = pd.read_parquet(folder/f\"y_train_fold_{fold}.parquet\")\n",
+    "    y_test_raw = pd.read_parquet(folder/f\"y_test_fold_{fold}.parquet\")\n",
     "\n",
     "    # Data for model\n",
     "    org = Organism.from_yaml(\n",
